# cling

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.kilo/plans/: 1782475047913-linux-clipboard-manager.md
crates/backends/: Cargo.toml
crates/backends/src/: lib.rs  mock.rs  wayland.rs  x11.rs
crates/backends/src/x11/: thread.rs
crates/backends/tests/: detect.rs  manager.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manager.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  opts.rs  unlock.rs
crates/dbus-iface/: Cargo.toml
crates/dbus-iface/src/: dto.rs  lib.rs  unlock.rs
crates/show/: Cargo.toml
crates/show/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: handle.rs  lib.rs  schema.rs
crates/store/tests/: handle.rs  store.rs
extension/: extension.js  metadata.json
packaging/: cling-daemon.autostart.desktop  cling-daemon.service
