[package]
name = "cling-show"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cling-show"
path = "src/main.rs"

[dependencies]
cling-common = { workspace = true }
cling-dbus-iface = { workspace = true }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
zbus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
